# ppt-design-skill

./: .gitignore  README.md  SKILL.md  design_tokens.json  install.ps1  pyproject.toml  setup.ps1
.claude/skills/pptmaker/: SKILL.md
Reference/: EndoRobotics_PPT Design 02_2026.02.pptx
scripts/: analyze_templates.py  cleanup_slides.py  com_probe.py  inspect_current.py  inspect_master.py  inspect_slide1.py  remove_empty_slides.py  remove_originals.py  verify_all.py  verify_bold_and_cover.py  verify_closing.py  verify_cover.py  verify_layouts.py
skills/ppt-brand-design/: README.md  SKILL.md  design_tokens.json  install.ps1  setup.ps1
skills/ppt-brand-design/layouts/: theme2.pptx
skills/ppt-brand-design/scripts/: analyze_templates.py
skills/ppt-brand-design/src/pptmaker/: __init__.py  custom_templates.py  design_tokens.py
skills/ppt-brand-design/src/pptmaker/slides/: agenda.py  closing.py  data_table.py  highlight_quote.py  process_flow.py  text_image.py  two_column.py
skills/ppt-brand-design/tests/: test_design_tokens.py
src/pptmaker/: __init__.py  custom_templates.py  health.py  live_session.py  offline_builder.py  theme_guard.py  themes.py
src/pptmaker/slides/: __init__.py  _common.py  agenda.py  chart.py  closing.py  comparison.py  cover.py  data_table.py  full_image.py  highlight_quote.py  kpi_cards.py  process_flow.py  section_divider.py  single_column.py  text_image.py  two_column.py
